# ascii-maze-rl

./: .gitignore  EXERCISE.md  LICENSE  README.md  mac_workshop.md  pyproject.toml
configs/: pregenerated_rollouts.json  train_grpo_exercise.config.json
doc/: plan.md
notebooks/: maze_grpo_h100.ipynb  maze_grpo_mac.ipynb  maze_grpo_workshop.ipynb  maze_large_mixed_repro_colab.ipynb  maze_reward_design.ipynb  maze_sft_grpo_colab.ipynb  maze_sft_training.ipynb
src/: build_rollout_viewer.py  build_viewer.py  convert_adapter.py  dataset_builder.py  evaluate.py  make_eval_splits.py  maze_census.py  maze_dataset.py  maze_gen.py  maze_repr.py  maze_verify.py  reward.py  rollout_capture.py  smoke_test.py  train_grpo.py  train_sft.py
src/training/: __init__.py  api.py  backend.py  config.py  mlx_backend.py  rewards.py  torch_backend.py
tests/: test_evaluate.py  test_maze_dataset.py  test_maze_gen.py  test_maze_repr.py  test_maze_verify.py  test_reward.py  test_training_api.py
